--- a/assignment13.ipynb
+++ b/assignment13.ipynb
@@ -18,12 +18,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ddb641e-0631-4834-ab73-22505fd2631a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.5     \u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.2.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr       \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mtibble      \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2     \u001b[39m 3.4.4     \u001b[32m✔\u001b[39m \u001b[34mtidyr       \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.5     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.1.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.1.3\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.1.1     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.2.0\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mscales\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m  masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m     masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m  masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "library('ISLR2')\n",
+    "library('tidymodels')\n",
     "\n"
    ]
   },
@@ -41,10 +69,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0b0c3ba0-d37c-42bc-a46d-cbc614d72484",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>default</th><th scope=col>student</th><th scope=col>balance</th><th scope=col>income</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>No</td><td>No </td><td> 729.5265</td><td>44361.625</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>No</td><td>Yes</td><td> 817.1804</td><td>12106.135</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>No</td><td>No </td><td>1073.5492</td><td>31767.139</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>No</td><td>No </td><td> 529.2506</td><td>35704.494</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>No</td><td>No </td><td> 785.6559</td><td>38463.496</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>No</td><td>Yes</td><td> 919.5885</td><td> 7491.559</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 4\n",
+       "\\begin{tabular}{r|llll}\n",
+       "  & default & student & balance & income\\\\\n",
+       "  & <fct> & <fct> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & No & No  &  729.5265 & 44361.625\\\\\n",
+       "\t2 & No & Yes &  817.1804 & 12106.135\\\\\n",
+       "\t3 & No & No  & 1073.5492 & 31767.139\\\\\n",
+       "\t4 & No & No  &  529.2506 & 35704.494\\\\\n",
+       "\t5 & No & No  &  785.6559 & 38463.496\\\\\n",
+       "\t6 & No & Yes &  919.5885 &  7491.559\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 4\n",
+       "\n",
+       "| <!--/--> | default &lt;fct&gt; | student &lt;fct&gt; | balance &lt;dbl&gt; | income &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 1 | No | No  |  729.5265 | 44361.625 |\n",
+       "| 2 | No | Yes |  817.1804 | 12106.135 |\n",
+       "| 3 | No | No  | 1073.5492 | 31767.139 |\n",
+       "| 4 | No | No  |  529.2506 | 35704.494 |\n",
+       "| 5 | No | No  |  785.6559 | 38463.496 |\n",
+       "| 6 | No | Yes |  919.5885 |  7491.559 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  default student balance   income   \n",
+       "1 No      No       729.5265 44361.625\n",
+       "2 No      Yes      817.1804 12106.135\n",
+       "3 No      No      1073.5492 31767.139\n",
+       "4 No      No       529.2506 35704.494\n",
+       "5 No      No       785.6559 38463.496\n",
+       "6 No      Yes      919.5885  7491.559"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Default |> head()"
    ]
@@ -61,10 +152,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "45716b9b-22d9-4731-b8fe-c4f1fdb5e66f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 2 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>default</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>No </td><td>9667</td></tr>\n",
+       "\t<tr><td>Yes</td><td> 333</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " default & n\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t No  & 9667\\\\\n",
+       "\t Yes &  333\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 2 × 2\n",
+       "\n",
+       "| default &lt;fct&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| No  | 9667 |\n",
+       "| Yes |  333 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  default n   \n",
+       "1 No      9667\n",
+       "2 Yes      333"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Default |> count(default)"
    ]
@@ -87,9 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1d725ca5-77de-4025-8ce5-f8e0fef30992",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "Default_split = initial_split(Default, prop = 0.90, strata = default)\n",
@@ -108,11 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b46b8b34-9849-4db2-91a3-027869b944a9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "mod <- logistic_reg(mode='classification') |> set_engine('glm')\n",
     "\n",
     "\n"
    ]
@@ -127,10 +270,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2131ba72-af1e-46ac-b62e-fa694d36b7aa",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.9661111</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.9661111\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| accuracy | binary | 0.9661111 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator .estimate\n",
+       "1 accuracy binary     0.9661111"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# This code calculates the accuracy of a model that always predicts default to be \"No\"\n",
     "\n",
@@ -159,13 +345,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2a53ed42-03d9-4840-a702-d8f44f74e773",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 10\n",
+      "Columns: 2\n",
+      "$ splits \u001b[3m\u001b[90m<list>\u001b[39m\u001b[23m [<vfold_split[8100 x 900 x 9000 x 4]>], [<vfold_split[8100 x 9…\n",
+      "$ id     \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Fold01\", \"Fold02\", \"Fold03\", \"Fold04\", \"Fold05\", \"Fold06\", \"Fo…\n"
+     ]
+    }
+   ],
    "source": [
+    "folds = vfold_cv(Default_train, v=10, strata = 'default')\n",
     "\n",
-    "\n"
+    "glimpse(folds)"
    ]
   },
   {
@@ -178,10 +378,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4b743466-c50b-491c-b476-0553cafa043d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.9728889</td><td>10</td><td>0.001875406</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>roc_auc </td><td>binary</td><td>0.9500094</td><td>10</td><td>0.005445689</td><td>Preprocessor1_Model1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.9728889 & 10 & 0.001875406 & Preprocessor1\\_Model1\\\\\n",
+       "\t roc\\_auc  & binary & 0.9500094 & 10 & 0.005445689 & Preprocessor1\\_Model1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 6\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| accuracy | binary | 0.9728889 | 10 | 0.001875406 | Preprocessor1_Model1 |\n",
+       "| roc_auc  | binary | 0.9500094 | 10 | 0.005445689 | Preprocessor1_Model1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator mean      n  std_err     .config             \n",
+       "1 accuracy binary     0.9728889 10 0.001875406 Preprocessor1_Model1\n",
+       "2 roc_auc  binary     0.9500094 10 0.005445689 Preprocessor1_Model1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mod |> \n",
     "    fit_resamples(default ~ income + balance, folds) |>\n",
@@ -197,13 +444,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99134b8d-eee8-4f47-898a-f0ccb24ae05e",
+   "cell_type": "markdown",
+   "id": "963c7dd1-1f52-4d3b-b9f1-c8da14748f89",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
+    "it is better\n",
     "\n"
    ]
   },
@@ -220,12 +465,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1c1db5b5-445e-4912-aeaa-5073ea17003f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.9732222</td><td>10</td><td>0.001906238</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>roc_auc </td><td>binary</td><td>0.9507718</td><td>10</td><td>0.005364985</td><td>Preprocessor1_Model1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.9732222 & 10 & 0.001906238 & Preprocessor1\\_Model1\\\\\n",
+       "\t roc\\_auc  & binary & 0.9507718 & 10 & 0.005364985 & Preprocessor1\\_Model1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 6\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| accuracy | binary | 0.9732222 | 10 | 0.001906238 | Preprocessor1_Model1 |\n",
+       "| roc_auc  | binary | 0.9507718 | 10 | 0.005364985 | Preprocessor1_Model1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator mean      n  std_err     .config             \n",
+       "1 accuracy binary     0.9732222 10 0.001906238 Preprocessor1_Model1\n",
+       "2 roc_auc  binary     0.9507718 10 0.005364985 Preprocessor1_Model1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "rec = # COMPLETE THE RECIPE\n",
+    "rec = recipe(default ~ income + balance + student, data=Default_train) |>\n",
+    "    step_dummy(student) |>\n",
+    "    prep()\n",
     "\n",
     "mod |>\n",
     "    fit_resamples(rec, folds) |>\n",
@@ -241,13 +535,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c32541be-f434-4517-bcd6-d125c5c3318d",
+   "cell_type": "markdown",
+   "id": "b88443cb-8ed5-46d7-b823-e73526a5bdde",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
+    "Yes it is slightly better\n",
     "\n"
    ]
   },
@@ -263,32 +555,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "12a41099-6a0e-4858-8cd2-fea3f1d2398d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.9728889</td><td>10</td><td>0.001875406</td><td>Preprocessor1_Model1</td></tr>\n",
+       "\t<tr><td>roc_auc </td><td>binary</td><td>0.9500094</td><td>10</td><td>0.005445689</td><td>Preprocessor1_Model1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.9728889 & 10 & 0.001875406 & Preprocessor1\\_Model1\\\\\n",
+       "\t roc\\_auc  & binary & 0.9500094 & 10 & 0.005445689 & Preprocessor1\\_Model1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 6\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| accuracy | binary | 0.9728889 | 10 | 0.001875406 | Preprocessor1_Model1 |\n",
+       "| roc_auc  | binary | 0.9500094 | 10 | 0.005445689 | Preprocessor1_Model1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator mean      n  std_err     .config             \n",
+       "1 accuracy binary     0.9728889 10 0.001875406 Preprocessor1_Model1\n",
+       "2 roc_auc  binary     0.9500094 10 0.005445689 Preprocessor1_Model1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "rec = recipe(default ~ income + balance, data=Default_test) |>\n",
+    "    prep()\n",
     "\n",
+    "mod |>\n",
+    "    fit_resamples(rec, folds) |>\n",
+    "    collect_metrics()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d43367-1501-4051-bba1-b663f92f7155",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "no it doesnt\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d8fe1d-4428-4a49-b47d-5c502bb3b9d9",
+   "id": "4614abdf-8e1a-429d-8317-36b66e6ee58b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
+   "display_name": "data730-lecture:R",
    "language": "R",
-   "name": "ir"
+   "name": "conda-env-data730-lecture-r"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -296,7 +647,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.3.2"
   }
  },
  "nbformat": 4,
